fix layout issue on query name component not aligning correctly in modal

--- a/sass/search/QueryEditor.scss
+++ b/sass/search/QueryEditor.scss
@@ -2,4 +2,7 @@
 	.bg__qed__table {
 		padding: 15px;
 	}
+	.form-group {
+		padding: 0 15px;
+	}
 }
